# j3PdfSplit

./: README.md
src/: .gitignore  AGENTS.md  MANIFEST.in  PdfSplitter.spec  README.md  THIRD_PARTY_NOTICES.txt  about.txt  build_release.py  pyproject.toml  requirements.txt
src/docs/: domain.md  product_spec.md
src/licenses/tkdnd/: license.terms
src/pdf_splitter/: __init__.py  __main__.py  app_info.py  main.py  user_messages.py
src/pdf_splitter/app/: __init__.py  controller.py
src/pdf_splitter/domain/: __init__.py  models.py
src/pdf_splitter/infra/: __init__.py  browser.py  legal_text.py  pdf_service.py  windows_dpi.py
src/pdf_splitter/ui/: localization.py  main_window.py  scaling.py  thumbnail_grid.py
src/tests/: test_controller.py  test_main_window.py  test_thumbnail_grid.py  test_ui_scale.py
src/tools/: play_done_sound.cmd  play_done_sound.ps1
