[build-system]
requires = ["setuptools>=80.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pdf-sequential-splitter"
version = "0.1.0"
description = "Tkinter 기반 PDF 순차 분할 프로그램"
readme = "README.md"
requires-python = "==3.14.3"
dependencies = [
    "Pillow>=12.1.1",
    "PyMuPDF>=1.27.1",
    "pypdf>=6.7.5",
    "tkinterdnd2>=0.4.3",
]

[project.scripts]
pdf-splitter = "pdf_splitter.main:main"

[tool.setuptools.packages.find]
include = ["pdf_splitter*"]

[tool.ruff]
line-length = 100
target-version = "py314"
