[build-system]
requires = ["setuptools>=82.0.1"]
build-backend = "setuptools.build_meta"

[project]
name = "pdf-sequential-splitter"
version = "0.2.0"
description = "Tkinter 기반 PDF 순차 분할 프로그램"
readme = "README.md"
license = "GPL-3.0-or-later"
license-files = [
    "LICENSE",
    "THIRD_PARTY_NOTICES.txt",
    "about.txt",
    "licenses/tkdnd/license.terms",
]
requires-python = ">=3.14.3,<3.15"
dependencies = [
    "Pillow>=12.2.0",
    "PyMuPDF>=1.27.2.3",
    "pypdf>=6.13.3",
    "tkinterdnd2>=0.5.0",
]

[project.scripts]
pdf-splitter = "pdf_splitter.main:main"

[project.urls]
Homepage = "https://github.com/edgarp9/j3PdfSplit"
Repository = "https://github.com/edgarp9/j3PdfSplit"
"Source Code" = "https://github.com/edgarp9/j3PdfSplit"

[tool.setuptools.packages.find]
include = ["pdf_splitter*"]

[tool.ruff]
line-length = 100
target-version = "py314"
